--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -52,11 +52,11 @@
 <p><span class="badge badge-light">Munich Munich M?nchen</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/OteemoInc/743999698292259-sr-site-reliability-engineer-devsecops'>Oteemo, Inc Sr. Site Reliability Engineer, DevSecOps | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/OteemoInc/743999698292259-sr-site-reliability-engineer-devsecops'>Oteemo, Inc Sr. Site Reliability Engineer, DevSecOps | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/blizzard/job/opinbfwZ'>Blizzard Entertainment Careers - Manager, Site Reliability Engineering</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/blizzard/job/opinbfwZ'>Blizzard Entertainment Careers - Manager, Site Reliability Engineering</a></h5> 
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -102,7 +102,7 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=o82u9fwx&__jvst=Tenable+Employee&__jvsd=sT9ITgwo&__jvsc=Twitter&bid=ng3dlMw8'>Tenable Careers - Principal Site Reliability Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=o82u9fwx&__jvst=Tenable+Employee&__jvsd=sT9ITgwo&__jvsc=Twitter&bid=ng3dlMw8'>Tenable Careers - Principal Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -114,7 +114,7 @@
 <p><span class="badge badge-light">Santa Clara, California</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AiryRooms/743999698105617-infrastructure-engineer-cloud-site-reliability-devsecops-'>Airy Rooms Infrastructure Engineer (Cloud/Site Reliability/DevSecOps) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AiryRooms/743999698105617-infrastructure-engineer-cloud-site-reliability-devsecops-'>Airy Rooms Infrastructure Engineer (Cloud/Site Reliability/DevSecOps) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -130,7 +130,7 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cameo.breezy.hr/p/245b9b175be4-site-reliability-engineer-sre'>Site Reliability Engineer (SRE) at Cameo</a></h5> 
+<h5><a href='https://cameo.breezy.hr/p/245b9b175be4-site-reliability-engineer-sre'>Site Reliability Engineer (SRE) at Cameo</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -184,7 +184,7 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/altsrc/jobs/principal-site-reliability-engineer-c4Tmce2wur6B16aKjNoogA'>Principal Site Reliability Engineer #0168 job at AltSource in Portland, OR, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/altsrc/jobs/principal-site-reliability-engineer-c4Tmce2wur6B16aKjNoogA'>Principal Site Reliability Engineer #0168 job at AltSource in Portland, OR, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Portland, ORPortland, OR</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -308,7 +308,7 @@ team based in Wellington. At SilverStripe, our mission is to help everyone have?
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qer9Vfwt&k=Job&j=o377afwb&__jvst=Employee&__jvsd=sIMG2hwY&__jvsc=Twitter&bid=nXSFeMwZ'>Smarsh Careers - Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qer9Vfwt&k=Job&j=o377afwb&__jvst=Employee&__jvsd=sIMG2hwY&__jvsc=Twitter&bid=nXSFeMwZ'>Smarsh Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon  Atlanta, Georgia</span></p>
 <p>Posted on:: 2019-10-19</p>
 <hr/>
@@ -324,7 +324,7 @@ team based in Wellington. At SilverStripe, our mission is to help everyone have?
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/blizzard/job/oj8lbfwH'>Blizzard Entertainment Careers - Senior Site Reliability Engineer, Embedded Games</a></h5> 
+<h5><a href='http://jobs.jobvite.com/blizzard/job/oj8lbfwH'>Blizzard Entertainment Careers - Senior Site Reliability Engineer, Embedded Games</a></h5> 
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -396,7 +396,7 @@ Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 <p><span class="badge badge-light">Portland, Oregon  Atlanta, Georgia</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/altsrc/jobs/site-reliability-engineer-team-lead-c4Tmce2wur6B16aKjNoogA'>Site Reliability Engineer - Team Lead #0168 job at AltSource in Portland, OR, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/altsrc/jobs/site-reliability-engineer-team-lead-c4Tmce2wur6B16aKjNoogA'>Site Reliability Engineer - Team Lead #0168 job at AltSource in Portland, OR, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Portland, ORPortland, OR</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -428,7 +428,7 @@ Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 <p><span class="badge badge-light">Bengaluru  Bangalore Jakarta</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/digitalonus/jobs/4479789002'>Job Application for Site Reliability Engineers  at Digital On Us</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/digitalonus/jobs/4479789002'>Job Application for Site Reliability Engineers  at Digital On Us</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -436,7 +436,7 @@ Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/talend/c254d935-57ef-4ef1-b475-1b12a11369fe'>Talend - Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/talend/c254d935-57ef-4ef1-b475-1b12a11369fe'>Talend - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA  Redwood City Paris London Beijing Tokyo Singapore Sydney Bangalore</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -444,11 +444,11 @@ Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 <p><span class="badge badge-light">Atlanta, Georgia</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999697390290-staff-site-reliability-engineer'>Optimizely Staff Site Reliability Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999697390290-staff-site-reliability-engineer'>Optimizely Staff Site Reliability Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.mozilla.org/position/gh/1916139/'>Senior Site Reliability Engineer ? Mozilla Jobs ? Open Positions</a></h5> 
+<h5><a href='https://careers.mozilla.org/position/gh/1916139/'>Senior Site Reliability Engineer ? Mozilla Jobs ? Open Positions</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
